--- a/config.json
+++ b/config.json
@@ -1,7 +1,1 @@
-{
-    'Authorization': "Basic YWRtaW46cGFzc3dvcmQ=",
-    'cache-control': "no-cache",
-    'Postman-Token': "23423423423423",
-    'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_10_1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/39.0.2171.95 Safari/537.36'
-
-    }
+{"Authorization": "Basic YWRtaW46cGFzc3dvcmQ=", "cache-control": "no-cache", "Postman-Token": "23423423423423", "User-Agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_10_1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/39.0.2171.95 Safari/537.36"}
